# pybind11_catkin

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: industrial_ci_action.yml
cmake/: pybind.cmake.in  pybind11_catkin.cmake.in
