<?xml version="1.0"?>
<package format="2">
  <name>pybind11_catkin</name>
  <version>2.0.3</version>
  <description>Provides a CMake module for melodic. For indigo and kinetic, please use the correct branch and bleeding-edge release.</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pybind11-dev</depend>
</package>
