<?xml version="1.0"?>
<package format="2">
  <name>pybind11_catkin</name>
  <version>2.4.3</version>
  <description>The pybind11 package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>python</build_export_depend>
  <build_export_depend>python-numpy</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
</package>
