<?xml version="1.0"?>
<package format="3">
  <name>pybind11_catkin</name>
  <version>2.10.3</version>
  <description>A package vendoring recent versions of pybind11 and providing extra macros for easier integration.</description>
  <maintainer email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</maintainer>
  <author>Wolfgang Merkt</author>
  <author>Vladimir Ivan</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>eigen</build_export_depend>

  <build_export_depend condition="$ROS_PYTHON_VERSION == 2">python</build_export_depend>
  <build_export_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</build_export_depend>
  <build_export_depend condition="$ROS_PYTHON_VERSION == 3">python3</build_export_depend>
  <build_export_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</build_export_depend>
  
  <depend condition="($ROS_DISTRO != melodic) and ($ROS_DISTRO != noetic)">pybind11-dev</depend>
</package>
